src/styles/ImageGallery.css
body {
  margin: 0;
}
#image-gallery {
  margin-top: 0px;
  padding: 15px 6px;
  height: auto;
  width: 100%;
  font-family: "Helvetica neue", Helvetica, Verdana, Sans-serif;
  background-color: #F8F8F8;
  display: grid;
  grid-template-columns: 36.1% 63.9%;

}

#left-shadow {
  top: 95%;
  left: 0.1%;
  height: 5px;
  width: 100px;
  position: relative;
  box-shadow: 0 15px 6px rgba(0,0,0,0.4);
  transform: rotate(-4deg);
  z-index: 1;
}

#current-image-container {
  position: relative;
  margin-right: 10px;
  width: 98%;
  display: flex;
  justify-content: center;
  align-items: center;
  z-index: 2;
}

#event-mask {
  position: absolute;
  display: none;
  width: 500px;
  height: 500px;
  background-color: rgba(255, 255, 255, 0.5);
  align-items: center;
  justify-content: center;
}

#zoom-trigger {
  display: flex;
  max-width: 25%;
  height: 25%;
  border: solid 1px #777;
  background-color: rgba(255, 255, 255, 0.8);
  font-size: 12.5px;
  text-align: center;
  align-items: center;
}

#zoom-selector {
  display: none;
  position: absolute;
  border: solid 1px black;
}

#current-image-container img {
  border: 1px solid #ccc;
  background-color: white;
  border-radius: 3px;
}

#extra-images-container {
  margin-top: 20px;
  height: 74px;
  display: flex;
  justify-content: center;
  align-items: center;
}

#main-view {
  height: 100%;
  width: 100%;
}

.extra-image-container {
  display: flex;
  justify-content: center;
  align-content: center;
  margin: 0;
  height: 72px;
  width: 72px;
  border: 1px solid #CCC;
  border-radius: 3px;
  background-color: #FFF;
}

.extra-image-container:hover {
  cursor: pointer;
  border: 1px solid  #777;
  background: #fafafa;
}

#selected-extra-image-container {
  border: 3px solid #777;
}

.extra-image {
  height: 64px;
  width: 64px;
  margin: auto;
}

#have-one-to-sell {
  display: flex;
  justify-content: center;
  align-items: center;
  margin-top: 10px;
  border-top: 1px dotted #CCC;
  padding: 15px 0;
  font-size: 13px;
}

#have-one-to-sell a {
  font-size: 14px;
  font-weight: 700;
  color: #0654ba;
  border-radius: 3px;
  border: 1px solid #ddd;
  cursor: pointer;
  padding: 0.5em 1.2em;
  box-shadow: 0 3px 0 rgba(0,0,0,0.04);
}

#have-one-to-sell a:hover {
  border: 1px solid #aaa;
  background: #fafafa;
  box-shadow: none;
}

#have-one-to-sell img {
  height: 16px;
}

#zoomed-image {
  overflow: hidden;
  transform: scale(1.2);
  z-index: 2;
  height: 100%;
  width: 100%;
}

